-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12
-
None
-
-
b7f5d34602e72eeda6620ea3e4326c6ff26b52d5
It seems that qmlplugindump is not able to cope with registerExtendedTypes in Qt 3D.
The output of e.g.
qmlplugindump -nonrelocatable Qt3D.Render 2.12
changes from invocation to invocation.
Component {
name: "Qt3DRender::Render::Quick::Quick3DTextureExtension"
defaultProperty: "textureImages"
prototype: "Qt3DRender::QTexture2DMultisampleArray"
vs
Component {
name: "Qt3DRender::Render::Quick::Quick3DTextureExtension"
defaultProperty: "textureImages"
prototype: "Qt3DRender::QTexture2DMultisampleArray"
vs
Component {
name: "Qt3DRender::Render::Quick::Quick3DTextureExtension"
defaultProperty: "textureImages"
prototype: "Qt3DRender::QTexture2D"
....
- is required for
-
QTBUG-70264 QML API Review for 5.12
-
- Closed
-
| For Gerrit Dashboard: QTBUG-70294 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 240287,7 | qmlplugindump: Properly handle extension types | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |