tests/auto/qml/qmlplugindump/qmlplugindump.pro
@@ -4,4 +4,5 @@ SUBDIRS += \
   tst_qmlplugindump.pro \
   data/dumper/Dummy/dummy.pro \
   data/dumper/Imports/imports.pro \
-  data/dumper/Versions/versions.pro
+  data/dumper/Versions/versions.pro \
+  data/dumper/ExtendedType/extendedtype.pro
